a few more getFirst fixes